--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
             // Добавляем проверку на 0 баллов
             if (totalPoints === 0) {
-                document.getElementById('finalMessage').textContent = "😢Увы, у Вас 0 баллов😔";
+                document.getElementById('finalMessage').textContent = "😢Увы, у вас 0 баллов😔";
             } else {
                 document.getElementById('finalMessage').textContent = `🎉Молодец🎉 Вы набрали ${totalPoints} баллов💰!`;
             }
@@ -128,5 +128,4 @@
 
 </body>
 </html>
-
 
